更新活動頁內容 - 新增step步驟圖

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -77,6 +77,9 @@
             <main class="main-container">
                 <section class="content">
                     <div class="main-title clearfix">
+                        <div class="i-accessories">
+                            <img src="images/accessories.png" width="100%">
+                        </div>
                         <div class="i-a">
                             <a href="/app/register"><img src="images/main-title.png" title="虎你好運抽紅包" width="100%"></a>
                         </div>
@@ -84,7 +87,7 @@
                             <a href="/app/register"><img src="images/tiger.png" title="tiger" width="100%"></a>
                         </div>
                     </div>
-                    <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽好包！</span><br>
+                    <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽紅包！</span><br>
                     即日起至111/2/9（三）23:59止，於「桃園市市民卡官方Line帳號」完成註冊動作，簡單步驟即可抽紅包！設籍在桃園並持有市民卡，即可抽168元紅包；設籍在桃園但未持有市民卡，也可抽88元紅包；紅包獎項共計一萬名，為你放大中獎率！</h3>
                 </section>
                 <section class="event-content">
@@ -125,14 +128,31 @@
                                 </li>
                                 <li>
                                     <p>註冊為會員－填寫基本資料，成為市民卡會員</p>
-                                    <p class="text-remark">提醒您，資料請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動參與資格。會員資料修改功能將於1/24（一）前上線，如有資料填寫錯誤之問題，請記得於活動截止前進行修正。</p>
+                                    <p class="text-remark">提醒您，資料請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動參與資格。</p>
                                 </li>
                             </ul>
+                            <div class="step-box">
+                                <ul class="clearfix">
+                                    <li class="top-title">
+                                        <img class="pc" src="images/step-title.png" title="虎運三步驟 掃、填、抽">
+                                        <img class="mob" src="images/step-title-s.png" title="虎運三步驟 掃、填、抽">
+                                    </li>
+                                    <li>
+                                        <img src="images/step1.png" title="掃 QRcode 加官方 line">
+                                    </li>
+                                    <li>
+                                        <img src="images/step2.png" title="填 註冊資料">
+                                    </li>
+                                    <li>
+                                        <img src="images/step3.png" title="抽 虎運紅包">
+                                    </li>
+                                </ul>
+                            </div>
                         
                             <h5>兌獎流程</h5>
                             <ul class="list">
                                 <li>
-                                    <p>獎項將於111/2/15（二）前，主辦單位將以電腦隨機亂數方式抽出幸運得獎者；中獎名單將於抽出後3個工作天公告桃園市市民卡主題網站與活動網站。請中獎人務必妥善保管中獎簡訊，並依中獎公告及通知流程進行後續兌獎。
+                                    <p>獎項將於111/2/15（二）前，由主辦單位以電腦隨機亂數方式抽出幸運得獎者；中獎名單將於抽出後3個工作天公告桃園市市民卡主題網站與活動網站。請中獎人務必妥善保管中獎推播訊息，並依中獎公告及通知流程進行後續兌獎。
                                     </p>
                                 </li>
                                 <li>
