--- a/iiot/taoyuang1000/register/account.html
+++ b/iiot/taoyuang1000/register/account.html
@@ -10,7 +10,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:type" content="website"/>
         <link rel="stylesheet" href="css/style.css">
-        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
     <body>
@@ -79,7 +78,7 @@
                         <li><p>12E4587489452789</p></li>
                         <li><p>1234587489452789</p></li>
                     </ul>
-                    <button class="btn-style"><i class="fas fa-sync-alt"></i> 更新市民卡</button>
+                    <button class="btn-style sync">更新市民卡</button>
                 </div>
             </section>
         </main>
