--- a/iiot/taoyuang1000/register/index.html
+++ b/iiot/taoyuang1000/register/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:type" content="website"/>
         <link rel="stylesheet" href="css/style.css">
-        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+        <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
     <body>
