--- a/CRM/project.html
+++ b/CRM/project.html
@@ -27,19 +27,32 @@
                     <a href="order.html">委刊單</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="product.html">產品</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="project.html">促銷專案</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="terms.html">附加條款</a>
-                </li>
-                <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
                 </li>
-                <li class="pushy-link">
-                    <a href="admin.html">使用者管理</a>
+                <li class="pushy-submenu">
+                    <button>服務項目</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="product.html">產品</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="project.html">促銷專案</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="terms.html">附加條款</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>權限控制</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="authority-order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -75,19 +88,32 @@
                     <a href="order.html">委刊單</a>
                 </li>
                 <li>
-                    <a href="product.html">產品</a>
-                </li>
-                <li>
-                    <a class="selected" href="project.html">促銷專案</a>
-                </li>
-                <li>
-                    <a href="terms.html">附加條款</a>
-                </li>
-                <li>
                     <a href="customer.html">客戶管理</a>
                 </li>
-                <li>
-                    <a href="admin.html">使用者管理</a>
+                <li class="pushy-submenu">
+                    <button class="selected">服務項目</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="product.html">產品</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a class="sub-selected" href="project.html">促銷專案</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="terms.html">附加條款</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>權限控制</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="authority-order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
