--- a/CRM/order.html
+++ b/CRM/order.html
@@ -26,19 +26,32 @@
                     <a href="order.html">委刊單</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="product.html">產品</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="project.html">促銷專案</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="terms.html">附加條款</a>
-                </li>
-                <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
                 </li>
-                <li class="pushy-link">
-                    <a href="admin.html">使用者管理</a>
+                <li class="pushy-submenu">
+                    <button>服務項目</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="product.html">產品</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="project.html">促銷專案</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="terms.html">附加條款</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>權限控制</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="authority-order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -71,22 +84,35 @@
         <nav class="side-menu">
             <ul>
                 <li>
-                    <a class="selected" href="order.html">委刊單</a>
-                </li>
-                <li>
-                    <a href="product.html">產品</a>
-                </li>
-                <li>
-                    <a href="project.html">促銷專案</a>
-                </li>
-                <li>
-                    <a href="terms.html">附加條款</a>
+                    <a  class="selected"href="order.html">委刊單</a>
                 </li>
                 <li>
                     <a href="customer.html">客戶管理</a>
                 </li>
-                <li>
-                    <a href="admin.html">使用者管理</a>
+                <li class="pushy-submenu">
+                    <button>服務項目</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="product.html">產品</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="project.html">促銷專案</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="terms.html">附加條款</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>權限控制</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="authority-order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
