新增專線與url網址

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -6,9 +6,9 @@
     <title>數位桃園數位振興！桃園市市民卡 虎你好運抽紅包</title>
     <meta name='description'content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
     <meta name='keywords' content="數位桃園, 數位振興, 虎你好運抽紅包,桃園市民, TTPUSH" />
-    <meta property="og:image" content="images/share-pic.jpg" />
+    <meta property="og:image" content="https://taoyuan1000.tycg.gov.tw/images/share-pic.jpg" />
     <meta property="og:title" content="數位桃園數位振興！桃園市市民卡 虎你好運抽紅包" />
-    <meta property="og:url" content="#" />
+    <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw/" />
     <meta property="og:description" content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
@@ -191,7 +191,7 @@
                                     <p>活動辦法、期間、中獎名單及相關詳情，以本府市民卡主題網站之公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
                                 </li>
                                 <li>
-                                    <p>詢問兌獎及活動相關事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，由專人為您服務。</p>
+                                    <p>詢問兌獎及活動相關事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>或撥客服專線03-3322107由專人為您服務。</p>
                                 </li>
                             </ul>
                         </div>
