新增 - 委刊單 審核畫面
1.待審核
2.已審核

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -28,6 +28,9 @@
                 <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
                 </li>
+                <li class="pushy-link">
+                    <a href="customer.html">委刊單審核</a>
+                </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
                     <ul>
@@ -88,6 +91,9 @@
                 </li>
                 <li>
                     <a href="customer.html">客戶管理</a>
+                </li>
+                <li>
+                    <a href="customer.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
