--- a/CRM/project.html
+++ b/CRM/project.html
@@ -29,6 +29,9 @@
                 <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
                 </li>
+                <li class="pushy-link">
+                    <a href="customer.html">委刊單審核</a>
+                </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
                     <ul>
@@ -89,6 +92,9 @@
                 </li>
                 <li>
                     <a href="customer.html">客戶管理</a>
+                </li>
+                <li>
+                    <a href="audit.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button class="selected">服務項目</button>
