--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -32,9 +32,23 @@
     <script type="text/javascript" src="js/menu.js"></script>
     <!-- Pushy -->
     <link rel="stylesheet" href="mobilemenu/pushy.css">
-
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TBZCW9V');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZCW9V" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div id="cookie-accept" class="cookie-accept">
         <span style="float: left;">為提供您更多優質的內容，本網站使用cookies分析技術。若繼續閱覽本網站內容，即表示您同意我們使用cookies，關於更多 cookies以及相關政策更新資訊，請閱讀我們的<a href="app/privacy" style="color: #FFE0DE;">隱私權及安全政策</a>。</span>
         <div class="close" onclick="javascript: $('#cookie-accept').hide(); createCookie('cookieAccepted', '1', 365, '/');">✖️</div>
@@ -100,7 +114,7 @@
                             <div class="both clearfix">
                                 <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <th>【虎你好運一路發】萊爾富$168元現金劵（1,000名）</th>
+                                        <th>【虎你好運一路發】超商現金券$168元現金劵（1,000名）</th>
                                     </tr>
                                     <tr>
                                         <td>1. 設籍在桃園並持有市民卡<br>
@@ -109,7 +123,7 @@
                                 </table>
                                 <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <th>【虎虎生風發發發】萊爾富$88元現金劵 （9,000名）</th>
+                                        <th>【虎虎生風發發發】超商現金券$88元現金劵 （9,000名）</th>
                                     </tr>
                                     <tr>
                                         <td>1. 設籍在桃園但未持有市民卡<br>
@@ -156,10 +170,10 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p>中獎人經訊息通知後，需透過萊爾富 Life-ET 機台兌換小白單並於萊爾富消費結帳時直接出示折抵。</p>
+                                    <p>中獎人經訊息通知後，開啟兌換券輸入指定密碼，並至指定超商兌換購物金。</p>
                                 </li>
                                 <li>
-                                    <p>本活動兌獎期限依萊爾富現金券顯示日期為主；逾期未領者將視為自動放棄資格。</p>
+                                    <p>本活動兌獎期限依超商現金券顯示日期為主；逾期未領者將視為自動放棄資格。</p>
                                 </li>
                             </ul>
                         </div>
