--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽紅包！</span><br>
-                    即日起至111/2/9（三）23:59止，於「桃園市市民卡官方Line帳號」完成註冊動作，簡單步驟即可抽紅包！設籍在桃園並持有市民卡，即可抽168元紅包；設籍在桃園但未持有市民卡，也可抽88元紅包；紅包獎項共計一萬名，為你放大中獎率！</h3>
+                    即日起至111/2/9（三）23:59止，於市民卡官方Line帳號完成註冊動作，簡單步驟即可抽紅包！888元、168元、88元三種面額，總計超過百萬元價值的紅包獎項，要用零接觸方式與大家共享年節喜氣！現在就動動手指，一起來試手氣吧 ！</h3>
                 </section>
                 <section class="event-content">
                     <div class="card">
@@ -114,20 +114,30 @@
                             <div class="both clearfix">
                                 <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <th>【虎你好運一路發】超商現金券$168元現金劵（1,000名）</th>
+                                        <th>【市民皆可抽！好運無限虎你發】 $888元超商現金劵</th>
                                     </tr>
                                     <tr>
-                                        <td>1. 設籍在桃園並持有市民卡<br>
-                                            2. 於桃園市市民卡官方LINE帳號註冊完成</td>
+                                        <td>1. 設籍在桃園<br>
+                                            2. 加入桃園市市民卡官方Line帳號好友並完成註冊</td>
                                     </tr>
                                 </table>
                                 <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <th>【虎虎生風發發發】超商現金券$88元現金劵 （9,000名）</th>
+                                        <th>【卡友專屬！虎你好運一路發】 $168元超商現金劵</th>
                                     </tr>
                                     <tr>
-                                        <td>1. 設籍在桃園但未持有市民卡<br>
-                                            2. 於桃園市市民卡官方LINE帳號註冊完成</td>
+                                        <td>1. 設籍在桃園<br>
+                                            2. 加入桃園市市民卡官方Line帳號好友並完成註冊
+                                            3. 持有桃園市市民卡</td>
+                                    </tr>
+                                </table>
+                                <table class="table-style" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <th>【市民皆可抽！虎虎生風發發發】$88元超商現金劵</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1. 設籍在桃園<br>
+                                            2. 加入桃園市市民卡官方Line帳號好友並完成註冊</td>
                                     </tr>
                                 </table>
                             </div>
@@ -170,10 +180,10 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p>中獎人經訊息通知後，開啟兌換券輸入指定密碼，並至指定超商兌換購物金。</p>
+                                    <p>中獎人經訊息通知後，依說明及指示操作即可至全台各地的「全家便利商店」進行兌換。</p>
                                 </li>
                                 <li>
-                                    <p>本活動兌獎期限依超商現金券顯示日期為主；逾期未領者將視為自動放棄資格。</p>
+                                    <p>本活動兌獎期限依實際顯示日期為主；逾期未領者將視為自動放棄資格。</p>
                                 </li>
                             </ul>
                         </div>
@@ -184,7 +194,7 @@
                                     <p>本活動限111/2/9（含）前設籍在桃園的市民卡持有人參與。因系統資料拋送問題，於111/2/8、9兩天遷入桃園戶籍者，需將身分證影本於活動截止前寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，讓主辦單位進行查驗。</p>
                                 </li>
                                 <li>
-                                    <p>每人只需要登記一次，同一位市民有多張市民卡無須重複參加活動。抽獎方式為隨機抽出登記者，市民卡持有人先抽168元紅包，未抽中名單再抽88元紅包，每人最高限中獎一次。</p>
+                                    <p>每人只需要登記一次，同一位市民有多張市民卡無須重複參加活動。抽獎方式為隨機抽出登記者，先抽888元紅包、未中籤者再抽168元、88元紅包，每人最高限中獎一次。</p>
                                 </li>
                                 <li>
                                     <p>於註冊後及活動截止前申請或變更市民卡之桃園市民，系統將以您的最終資料驗證並作為判斷依據，確認您的抽獎資格。</p>
