--- a/CRM/project.html
+++ b/CRM/project.html
@@ -709,6 +709,10 @@
                                     </li>
                                 </ul>
                             </fieldset>
+                            <fieldset class="clearfix">
+                                <label class="item-title">最多可選數量</label>
+                                <input class="w30" type="" name="" value="">
+                            </fieldset>
                         </div>
                     </div>
                     <div class="field clearfix">
