--- a/CRM/audit_done.html
+++ b/CRM/audit_done.html
@@ -65,7 +65,7 @@
     <div id="container">
     <header class="header-container clearfix">
         <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-        <div class="logo"></div>
+        <a class="logo" href="dashboard.html"></a>
         <p class="text-title">CRM 管理後台</p>
         <div class="user-info clearfix">
             <div class="profile">
