更新活動內容

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -102,13 +102,13 @@
                         </div>
                     </div>
                     <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽紅包！</span><br>
-                    即日起至111/2/9（三）23:59止，於市民卡官方Line帳號完成註冊動作，簡單步驟即可抽紅包！888元、168元、88元三種面額，總計超過百萬元價值的紅包獎項，要用零接觸方式與大家共享年節喜氣！現在就動動手指，一起來試手氣吧 ！</h3>
+                    登記日好評再延長，截至111/2/15（二）23:59止，於市民卡官方Line帳號完成註冊動作，簡單步驟即可抽紅包！888元、168元、88元三種面額，總計超過百萬元價值的紅包獎項，要用零接觸方式與大家共享年節喜氣！現在就動動手指，一起來試手氣吧 ！</h3>
                 </section>
                 <section class="event-content">
                     <div class="card">
                         <div class="info" id="goThe01">
                             <h5>活動期間</h5>
-                            <p>即日起至111/2/9（三） 23:59，逾時恕不受理。</p>
+                            <p>截至111/2/15（二） 23:59止，逾時恕不受理。</p>
 
                             <h5>獎項內容/參與條件</h5>
                             <div class="both clearfix">
@@ -176,7 +176,7 @@
                             <h5>兌獎流程</h5>
                             <ul class="list">
                                 <li>
-                                    <p>獎項將於111/2/15（二）前，由主辦單位以電腦隨機亂數方式抽出幸運得獎者；中獎名單將於抽出後3個工作天公告桃園市市民卡主題網站與活動網站。請中獎人務必妥善保管中獎推播訊息，並依中獎公告及通知流程進行後續兌獎。
+                                    <p>獎項將於2月底前，由主辦單位以電腦隨機亂數方式抽出幸運得獎者；中獎名單將於抽出後3個工作天公告桃園市市民卡主題網站與活動網站。請中獎人務必妥善保管中獎推播訊息，並依中獎公告及通知流程進行後續兌獎。
                                     </p>
                                 </li>
                                 <li>
@@ -191,7 +191,7 @@
                             <h6>注意事項</h6>
                             <ul>
                                 <li>
-                                    <p>本活動限111/2/9（含）前設籍在桃園的市民卡持有人參與。因系統資料拋送問題，於111/2/8、9兩天遷入桃園戶籍者，需將身分證影本於活動截止前寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，讓主辦單位進行查驗。</p>
+                                    <p>本活動限111/2/15（含）前設籍在桃園的市民參與。因系統資料拋送問題，如於111/2/15（含）前遷入桃園戶籍但系統未顯示正確活動資格者，請將身分證影本於活動截止前寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，由主辦單位進行查驗。</p>
                                 </li>
                                 <li>
                                     <p>每人只需要登記一次，同一位市民有多張市民卡無須重複參加活動。抽獎方式為隨機抽出登記者，先抽888元紅包、未中籤者再抽168元、88元紅包，每人最高限中獎一次。</p>
