更新網頁圖片與分享圖

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -6,7 +6,7 @@
     <title>數位桃園數位振興！桃園市市民卡 虎你好運抽紅包</title>
     <meta name='description'content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
     <meta name='keywords' content="數位桃園, 數位振興, 虎你好運抽紅包,桃園市民, TTPUSH" />
-    <meta property="og:image" content="https://taoyuan1000.tycg.gov.tw/images/share-pic.jpg" />
+    <meta property="og:image" content="https://taoyuan1000.tycg.gov.tw/images/share-pic-0209.jpg" />
     <meta property="og:title" content="數位桃園數位振興！桃園市市民卡 虎你好運抽紅包" />
     <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw/" />
     <meta property="og:description" content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
@@ -95,10 +95,10 @@
                             <img src="images/accessories.png" width="100%">
                         </div>
                         <div class="i-a">
-                            <a href="/app/register"><img src="images/main-title.png" title="虎你好運抽紅包" width="100%"></a>
+                            <a href="/app/register"><img src="images/main-title-0209.png" title="虎你好運抽紅包" width="100%"></a>
                         </div>
                         <div class="i-b">
-                            <a href="/app/register"><img src="images/tiger.png" title="tiger" width="100%"></a>
+                            <a href="/app/register"><img src="images/tiger-0209.png" title="tiger" width="100%"></a>
                         </div>
                     </div>
                     <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽紅包！</span><br>
