委刊單-點選編輯的"列印"按鈕，改移到預覽頁下方

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -1129,7 +1129,7 @@
             <div class="bottom-btn-tool both-btn">
                 <fieldset class="field">
                     <input class="btn--primary-xl bg-c-org" type="submit" value="預覽">
-                    <input class="btn--primary-xl" type="submit" value="印出">
+                    <!-- <input class="btn--primary-xl" type="submit" value="印出"> -->
                 </fieldset>
             </div>
         </div>
