--- a/CRM/order_print.html
+++ b/CRM/order_print.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <section class="print-order-info">
+  <div id="block">
   <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border: 2px solid #333; border-bottom:none;">
     <!-- <colgroup>
       <col style="width: 58px">
@@ -301,6 +302,10 @@
       </tr>
     </tbody>
   </table>
+  </div>
+  <div class="bottom-btn-tool">
+    <input class="btn--primary-xl" value="印出" type="button">
+  </div>
 </section>
 </body>
 </html>
