新增一顆粉色"登出"按鈕

--- a/iiot/taoyuang1000/register/done.html
+++ b/iiot/taoyuang1000/register/done.html
@@ -26,6 +26,7 @@
                 <p class="text-info">持續關注官方Line帳號，掌握活動最新訊息。</p>
                 <!-- 看要不要放↓ -->
                 <a class="btn-style" href="#">活動詳情請洽官網</a>
+                <button class="btn-style btn-out">登出</button>
             </section>
             <section class="contents-box">
                 <div class="img">
@@ -42,6 +43,7 @@
                 </ul>
                 <!-- 看要不要放↓ -->
                 <a class="btn-style" href="#">活動詳情請洽官網</a>
+                <button class="btn-style btn-out">登出</button>
             </section>
         </main>
         <footer class="footer">
