--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -59,6 +59,9 @@
         <div class="pushy-content">
             <ul>
                 <li class="pushy-link">
+                    <a href="#">中獎名單下載</a>
+                </li>
+                <li class="pushy-link">
                     <a class="go-section-01">活動辦法</a>
                 </li>
                 <li class="pushy-link">
@@ -81,6 +84,7 @@
             </a>
             <nav class="nav-menu">
                 <ul>
+                    <li><a href="#">中獎名單下載</a></li>
                     <li class="go-section-01">活動辦法</li>
                     <li><a href="/app/privacy">隱私權及安全政策</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
@@ -107,6 +111,10 @@
                 <section class="event-content">
                     <div class="card">
                         <div class="info" id="goThe01">
+                            <h5>個人中獎查詢</h5>
+                            <p>請點選以下按鈕前往，或查詢桃園市民卡LINE官方帳號(@tycc)查詢個人中獎紀錄。</p>
+                            <a class="btn-record" href="#">前往官方帳號查詢個人中獎紀錄</a>
+
                             <h5>活動期間</h5>
                             <p>截至111/2/15（二） 23:59止，逾時恕不受理。</p>
 
@@ -176,14 +184,14 @@
                             <h5>兌獎流程</h5>
                             <ul class="list">
                                 <li>
-                                    <p>獎項將於2月底前，由主辦單位以電腦隨機亂數方式抽出幸運得獎者；中獎名單將於抽出後3個工作天公告桃園市市民卡主題網站與活動網站。請中獎人務必妥善保管中獎推播訊息，並依中獎公告及通知流程進行後續兌獎。
+                                    <p>獎項公告後，中獎者將會收到LINE推播的中獎訊息（含短網址與四位密碼），亦能透過<a href="https://lin.ee/0lv1T1e" target="_blank">市民卡官方LINE帳號</a>或活動網站查看中獎資格。
                                     </p>
                                 </li>
                                 <li>
-                                    <p>中獎人經訊息通知後，依說明及指示操作即可至全台各地的「全家便利商店」進行兌換。</p>
+                                    <p>點選LINE推播訊息中的短網址並輸入四位密碼，即會出現「全家購物金」兌換條碼。</p>
                                 </li>
                                 <li>
-                                    <p>本活動兌獎期限依實際顯示日期為主；逾期未領者將視為自動放棄資格。</p>
+                                    <p>出示兌換條碼給「全家便利商店」櫃檯人員即可進行購物折抵。</p>
                                 </li>
                             </ul>
                         </div>
@@ -191,7 +199,13 @@
                             <h6>注意事項</h6>
                             <ul>
                                 <li>
-                                    <p>本活動限111/2/15（含）前設籍在桃園的市民參與。因系統資料拋送問題，如於111/2/15（含）前遷入桃園戶籍但系統未顯示正確活動資格者，請將身分證影本於活動截止前寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，由主辦單位進行查驗。</p>
+                                    <p>本活動預計於111年2月21日以電腦隨機亂數方式進行抽獎，抽獎後一週內於活動網站公告中獎名單，並依中獎者參與活動之LINE帳號進行中獎訊息推播，請務必留意相關訊息。中獎者請依照全家便利商店載明期限內兌換及使用，如有遺失或逾期即視同自動放棄中獎權益及兌換資格，不得要求主辦單位補發或退還點數，主辦單位將不另行重抽中獎者。</p>
+                                </li>
+                                <li>
+                                    <p>本活動獎項不得要求更換或折換現金，如中獎人不同意或違反規定者，主辦單位保有取消中獎資格及參與本活動的權利，並對任何破壞本活動行為保留法律追訴權。</p>
+                                </li>
+                                <li>
+                                    <p>本活動因系統資料拋送問題，111/2/15（含）前遷入桃園戶籍但系統未顯示正確活動資格者，請於活動截止前將身分證影本寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，由主辦單位進行查驗。</p>
                                 </li>
                                 <li>
                                     <p>每人只需要登記一次，同一位市民有多張市民卡無須重複參加活動。抽獎方式為隨機抽出登記者，先抽888元紅包、未中籤者再抽168元、88元紅包，每人最高限中獎一次。</p>
@@ -215,7 +229,7 @@
                                     <p>活動辦法、期間、中獎名單及相關詳情，以本府市民卡主題網站之公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
                                 </li>
                                 <li>
-                                    <p>詢問兌獎及活動相關事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>或撥客服專線03-3322107由專人為您服務。</p>
+                                    <p>如需詢問兌獎及活動相關事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>或於上班時間（平日9:00-21:00）撥客服專線03-3322107 由專人為您服務。</p>
                                 </li>
                             </ul>
                         </div>
