委刊單與產品頁小調整
1.委刊單 - 新增其他費用
2.產品 - checkbox 改 下拉選單

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -574,6 +574,21 @@
                     </div>
                     <div class="field clearfix">
                         <div class="left-sub-title">
+                            <p>其他費用</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset>
+                                <label class="item-title">帳號設定費</label>
+                                <input class="default" type="" name="" value="">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">專案上線費</label>
+                                <input class="default" type="" name="" value="">
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
                             <p>電子發票<br>付款條件</p>
                         </div>
                         <div class="fillin-info">
@@ -809,7 +824,7 @@
                             </fieldset>
                         </div>
                     </div>
-                    <div class="field clearfix">
+                    <div class="field no-line clearfix">
                         <div class="left-sub-title">
                             <p>委刊媒體</p>
                         </div>
@@ -988,6 +1003,21 @@
                                         <p class="total">-</p>
                                     </div>
                                 </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>其他費用</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset>
+                                <label class="item-title">帳號設定費</label>
+                                <input class="default" type="" name="" value="3000">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">專案上線費</label>
+                                <input class="default" type="" name="" value="3000">
                             </fieldset>
                         </div>
                         <div class="order-total clearfix">
@@ -1220,7 +1250,7 @@
                             </fieldset>
                         </div>
                     </div>
-                    <div class="field clearfix">
+                    <div class="field no-line clearfix">
                         <div class="left-sub-title">
                             <p>委刊媒體</p>
                         </div>
@@ -1365,6 +1395,21 @@
                                         <p class="total">-</p>
                                     </div>
                                 </div>
+                            </fieldset>
+                        </div>
+                    </div>
+                    <div class="field clearfix">
+                        <div class="left-sub-title">
+                            <p>其他費用</p>
+                        </div>
+                        <div class="fillin-info">
+                            <fieldset>
+                                <label class="item-title">帳號設定費</label>
+                                <p class="input-value"><span class="">3000</span></p>
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">專案上線費</label>
+                                <p class="input-value"><span class="">3000</span></p>
                             </fieldset>
                         </div>
                         <div class="order-total clearfix">
