--- a/CRM/product.html
+++ b/CRM/product.html
@@ -444,11 +444,18 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">必選產品</label>
-                                <div class="confirm clearfix">
+                                <!-- <div class="confirm clearfix">
                                     <div class="option-list">
                                         <input id="" type="checkbox" name="" value="必選產品">
                                         <label for="option">委刊單內必有此產品</label>
                                     </div>
+                                </div> -->
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇媒體類型</option>
+                                        <option value="1" selected>委刊單內必有此產品</option>
+                                        <option value="2">委刊單內XXXX</option>
+                                    </select>
                                 </div>
                             </fieldset>
                             <fieldset>
@@ -608,11 +615,12 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">必選產品</label>
-                                <div class="confirm clearfix">
-                                    <div class="option-list">
-                                        <input id="" type="checkbox" name="" value="必選產品" checked >
-                                        <label for="option">委刊單內必有此產品</label>
-                                    </div>
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇媒體類型</option>
+                                        <option value="1" selected>委刊單內必有此產品</option>
+                                        <option value="2">委刊單內XXXX</option>
+                                    </select>
                                 </div>
                             </fieldset>
                             <fieldset>
