--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -111,6 +111,12 @@
                 <section class="event-content">
                     <div class="card">
                         <div class="info" id="goThe01">
+                            <h5>《虎你好運抽紅包》線上抽獎影片</h5>
+                            <div class="video-box">
+                                <iframe src="https://www.youtube.com/embed/Mmx4CrBYPB8" title="YouTube video player"
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            </div>
                             <h5>個人中獎查詢</h5>
                             <p>請點選以下按鈕前往，或查詢桃園市民卡LINE官方帳號(@tycc)查詢個人中獎紀錄。</p>
                             <a class="btn-record" href="#">前往官方帳號查詢個人中獎紀錄</a>
@@ -194,6 +200,55 @@
                                     <p>出示兌換條碼給「全家便利商店」櫃檯人員即可進行購物折抵。</p>
                                 </li>
                             </ul>
+                            <div class="step-box">
+                                <ul class="clearfix">
+                                    <li class="top-title">
+                                        <img class="pc" src="images/gift-step-title.png" title="全家便利超商購物金兌換">
+                                        <img class="mob" src="images/gift-step-title-s.png" title="全家便利超商購物金兌換">
+                                    </li>
+                                    <li>
+                                        <img src="images/gift-step1.png" title="傳 訊息通知">
+                                    </li>
+                                    <li>
+                                        <img src="images/gift-step2.png" title="點 網址輸入密碼">
+                                    </li>
+                                    <li>
+                                        <img src="images/gift-step3.png" title="兌 換購物商品">
+                                    </li>
+                                </ul>
+                            </div>
+                            
+                            <h5>如何查詢是否獲獎</h5>
+                            <ul class="list">
+                                <li>
+                                    <p>獎項公告後，中獎者將會收到LINE推播的中獎訊息（含短網址與四位密碼），亦能透過<a href="https://lin.ee/0lv1T1e"
+                                            target="_blank">市民卡官方LINE帳號</a>或活動網站查看中獎資格。
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>點選LINE推播訊息中的短網址並輸入四位密碼，即會出現「全家購物金」兌換條碼。</p>
+                                </li>
+                                <li>
+                                    <p>出示兌換條碼給「全家便利商店」櫃檯人員即可進行購物折抵。</p>
+                                </li>
+                            </ul>
+                            <div class="step-box inquiret-style">
+                                <ul class="clearfix">
+                                    <li class="top-title">
+                                        <img class="pc" src="images/inquire-step-title.png" title="如何查詢是否獲獎">
+                                        <img class="mob" src="images/inquiret-step-title-s.png" title="如何查詢是否獲獎">
+                                    </li>
+                                    <li>
+                                        <img src="images/inquire-step1.png" title="開啟官方LINE">
+                                    </li>
+                                    <li>
+                                        <img src="images/inquire-step2.png" title="點選得獎查詢">
+                                    </li>
+                                    <li>
+                                        <img src="images/inquire-step3.png" title="完成查詢結果">
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="note">
                             <h6>注意事項</h6>
