風格更改，新增 style-taxi class

--- a/iiot/taoyuang1000/register/account.html
+++ b/iiot/taoyuang1000/register/account.html
@@ -14,10 +14,10 @@
     </head>
     <body>
         <!--  main  -->
-        <main class="landing">
+        <main class="landing style-taxi">
             <section class="contents-box">
                 <div class="img">
-                    <img src="images/img-title.png" title="虎你好運抽紅包" width="100%">
+                    <img src="images/img-title-taxi.png" title="桃園市民卡 安心乘車HAPPY購" width="100%">
                 </div>
                 <h1 class="maintitle">
                     會員資料
