--- a/iiot/taoyuang1000/register/privacy.html
+++ b/iiot/taoyuang1000/register/privacy.html
@@ -14,10 +14,10 @@
     </head>
     <body bgcolor="#b21117">
         <!--  main  -->
-        <main class="landing">
+        <main class="landing style-taxi">
             <section class="contents-box privacy-content">
                 <div class="img">
-                    <img src="images/img-title.png" title="虎你好運抽紅包" width="100%">
+                    <img src="images/img-title-taxi.png" title="桃園市民卡 安心乘車HAPPY購" width="100%">
                 </div>
                 <h1 class="subtitle">隱私權及安全政策</h1>
                 <h3>關於個人資料保護，請參閱以下「數位桃園1000+市民卡振興加碼」的隱私權聲明：
