--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -65,7 +65,7 @@
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="#">虎你好運抽紅包</a>
+                    <a href="/envelope"">虎你好運抽紅包</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -86,7 +86,7 @@
                 <ul>
                     <li class="go-section-01">活動辦法</li>
                     <li><a href="/app/privacy">隱私權及安全政策</a></li>
-                    <li><a href="#">虎你好運抽紅包</a></li>
+                    <li><a href="/envelope">虎你好運抽紅包</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
