抽紅包活動頁 - 補選單 安心乘車HAPPY購

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -68,6 +68,9 @@
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
+                    <a class="/index.html">安心乘車HAPPY購</a>
+                </li>
+                <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
                 </li>
             </ul>
@@ -87,6 +90,7 @@
                     <li><a href="/lottery-202202.pdf">中獎名單下載</a></li>
                     <li class="go-section-01">活動辦法</li>
                     <li><a href="/app/privacy">隱私權及安全政策</a></li>
+                    <li><a class="/index.html">安心乘車HAPPY購</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
